fixed bad spacing split

--- a/style.css
+++ b/style.css
@@ -107,7 +107,6 @@ section {
 .split {
 	width: 50%;
 	margin: 0 auto;
-	min-height: 20rem;
 }
 
 .split h1 {
